Updated for Moritz' Inkscape changes
Moritz no longer writes each score's "about"
link on its first page, so the AP now prints this
link under the score selector when the score is
selected. Moritz also adds this link to the score's
(Inkscape) metadata.
Moritz now creates 5 named layers in the score.
The AP ignores all levels except "moritz" - which
contains all the machine-time info - and
"transparent, clickable surface" - which is used
by the 'set start marker' and 'set end marker'
tools to find mouse-click coordinates.
The score reading code has thereby been much
improved and simplified.

--- a/assistantPerformer.html
+++ b/assistantPerformer.html
@@ -14,9 +14,9 @@ xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
 
 </head>
 <body
-    style="text-align: center; font-family: Lucida Sans Unicode, Verdana, Arial, Geneva, Sans-Serif; padding: 0px; margin: 0px;">
+    style="text-align: center; font-family: Lucida Sans Unicode, Verdana, Arial, Geneva, Sans-Serif; padding: 0; margin: 0;">
     <div id="centredReferenceDiv" class="centredReference">
-        <div id="titleOptionsDiv" style="text-align: center; visibility: visible; margin:0px;">
+        <div id="titleOptionsDiv" style="text-align: center; visibility: visible; margin:0;">
             <p class="header1" style="margin:5px;">
                 Assistant Performer
             </p>
@@ -44,16 +44,19 @@ xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
                     <select id="scoreSelect"
                         class="deviceSelector" onchange="_AP.controls.doControl('scoreSelect')">
 						<option value="choose a score">choose a score</option>
-                        <option value="folder=Song Six, title=Song Six, nPages=13, svgPageWidth=1010, svgPageHeight=1237, nOutputVoices=9, nInputVoices=0, inputHandler=none">Song Six</option>
-						<option value="folder=Study 2c3.1, title=Study 2c3.1, nPages=3, svgPageWidth=1010, svgPageHeight=1237, nOutputVoices=3, nInputVoices=0, inputHandler=none">Study 2c3.1</option>
-						<option value="folder=Study 3 sketch 1, title=Study 3 sketch 1, nPages=2, svgPageWidth=1010, svgPageHeight=1237, nOutputVoices=8, nInputVoices=0, inputHandler=none">Study 3 sketch 1</option>
-						<option value="folder=Study 3 sketch 2.1 - with input, title=Study 3 sketch 2, nPages=2, svgPageWidth=1429, svgPageHeight=875, nOutputVoices=8, nInputVoices=1, inputHandler=keyboard1">Study 3 sketch 2.1 - with input</option>
-						<option value="folder=Study 3 sketch 2.2 - less visible, title=Study 3 sketch 2, nPages=1, svgPageWidth=1429, svgPageHeight=875, nOutputVoices=8, nInputVoices=1, inputHandler=keyboard1">Study 3 sketch 2.2 - less visible</option>	
+						<option value="folder=Song Six, title=Song Six, nPages=13, svgPageWidth=1010, svgPageHeight=1237, nOutputVoices=9, nInputVoices=0, inputHandler=none, aboutURL=http://james-ingram-act-two.de/compositions/songSix/aboutSongSix.html">Song Six</option>
+						<option value="folder=Study 2c3.1, title=Study 2c3.1, nPages=3, svgPageWidth=1010, svgPageHeight=1237, nOutputVoices=3, nInputVoices=0, inputHandler=none, aboutURL=http://james-ingram-act-two.de/compositions/study2/aboutStudy2.html">Study 2c3.1</option>
+						<option value="folder=Study 3 sketch 1, title=Study 3 sketch 1, nPages=2, svgPageWidth=1010, svgPageHeight=1237, nOutputVoices=8, nInputVoices=0, inputHandler=none, aboutURL=http://james-ingram-act-two.de/compositions/sketches/study3Sketch/aboutStudy3Sketch.html">Study 3 sketch 1</option>
+						<option value="folder=Study 3 sketch 2.1 - with input, title=Study 3 sketch 2, nPages=2, svgPageWidth=1429, svgPageHeight=875, nOutputVoices=8, nInputVoices=1, inputHandler=keyboard1, aboutURL=http://james-ingram-act-two.de/compositions/sketches/study3Sketch/aboutStudy3Sketch.html">Study 3 sketch 2.1 - with input</option>
+						<option value="folder=Study 3 sketch 2.2 - less visible, title=Study 3 sketch 2, nPages=1, svgPageWidth=1429, svgPageHeight=875, nOutputVoices=8, nInputVoices=1, inputHandler=keyboard1, aboutURL=http://james-ingram-act-two.de/compositions/sketches/study3Sketch/aboutStudy3Sketch.html">Study 3 sketch 2.2 - less visible</option>	
                     </select>
                     <select id="outputDeviceSelect"
                         class="deviceSelector" onchange="_AP.controls.doControl('outputDeviceSelect')">
                     </select>
                 </div>
+				<div id="aboutScoreLinkDiv" style="padding-top: 2px; display:none; text-align:center; font-size:11px">
+					<a id="aboutScoreLink" href="" target="_blank">About this score...</a>
+				</div> 
                 <div id="globalSpeedDiv" class="globalSpeedPanel" style="display:none;">
                     <div style="padding-top: 4px;">
                         <label id="globalSpeedInputNumberLabel1" for="globalSpeedInput">
@@ -61,7 +64,7 @@ xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
                         </label>
                         <input type="number" id="globalSpeedInput" value="100"
                             onblur ="_AP.controls.doControl('globalSpeedInput')"
-                            style="margin: 0px 0px 3px 0px; width: 65px; vertical-align: middle;" />
+                            style="margin: 0 0 3px 0; width: 65px; vertical-align: middle;" />
                         <label id="globalSpeedInputNumberLabel2" for="globalSpeedInput">
                             % [Greater than 0%] Higher values lead to higher speed.
                         </label>
@@ -73,8 +76,8 @@ xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
             </div>
         </div>
 
-        <div id="svgRuntimeControls" style="position: absolute; padding: 0px; top: 0px; left: 210px; width: 1042px; height: 41px; visibility: hidden;">
-            <svg xmlns="http://www.w3.org/2000/svg" width="170" height="36" style="position: absolute; left: 428px; top: 0px;">
+        <div id="svgRuntimeControls" style="position: absolute; padding: 0; top: 0; left: 210px; width: 1042px; height: 41px; visibility: hidden;">
+            <svg xmlns="http://www.w3.org/2000/svg" width="170" height="36" style="position: absolute; left: 428px; top: 0;">
                 <g id="performanceButtons" transform="translate(0.5, 0.5)">
                     <rect id="performanceButtonsFrame" x="0" y="0" width="169" height="30" stroke="#008000" stroke-width="1" fill="#F5FFF5" />
                     <rect id="performanceButtonsDisabled" x="0" y="0" width="169" height="30" stroke="white" stroke-width="1" fill="white" opacity="0" />
@@ -238,9 +241,9 @@ xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
                 </g>
             </svg>
             <div id="downloadLinkDiv"
-                style="position: absolute; top: 0px; left: 681px;">
+                style="position: absolute; top: 0; left: 681px;">
             </div>
-            <svg xmlns="http://www.w3.org/2000/svg" width="104" height="36" style="position: absolute; left: 925px; top: 0px;">
+            <svg xmlns="http://www.w3.org/2000/svg" width="104" height="36" style="position: absolute; left: 925px; top: 0;">
                 <g id="gotoOptions" transform="translate(0.5, 0.5)"
                     onmouseover="_AP.controls.showOverRect('overGotoOptionsFrame', 'gotoOptionsDisabled')"
                     onmouseout="_AP.controls.hideOverRect('overGotoOptionsFrame')"
@@ -256,7 +259,7 @@ xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
         </div>
         <div
             id="svgPages"
-            style="border: 1px solid #008000; width: 1446px; height: 600px; overflow: auto; position: absolute; top: 36px; padding-top: 0px; margin-top: 0px; left: 0px; line-height: 0px; visibility: hidden;">
+            style="border: 1px solid #008000; width: 1446px; height: 600px; overflow: auto; position: absolute; top: 36px; padding-top: 0; margin-top: 0; left: 0; line-height: 0; visibility: hidden;">
             <!--
                     <embed
 					    src="http://james-ingram-act-two.de/open-source/assistantPerformer/scores/Study%202c3.1/Study 2c3.1 page 1.svg"
