--- a/scores/Song Six/Song Six.html
+++ b/scores/Song Six/Song Six.html
@@ -105,6 +105,13 @@
 					width="1010"
 					height="1237" />
 				<br />
+				<embed
+					src="Song Six page 14.svg"
+					content-type="image/svg+xml"
+					class="svgPage"
+					width="1010"
+					height="1237" />
+				<br />
 			</div>
 		</div>
 	</body>
