--- a/assistantPerformer.html
+++ b/assistantPerformer.html
@@ -42,16 +42,16 @@ xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
 				<select id="scoreSelect"
 						class="deviceSelector" onchange="_AP.controls.doControl('scoreSelect')">
 					<option value="choose a score">choose a score</option>
-					<option value="path=Song Six/Song Six (complete)">Song Six (scroll)</option>
+					<option value="path=Song Six/Song Six (scroll)">Song Six (scroll)</option>
 					<option value="path=Song Six/Song Six (14 pages)">Song Six (pages)</option>
-					<option value="path=Study 2c3.1/Study 2c3.1 (complete)">Study 2c3.1 (scroll)</option>
-					<option value="path=Study 2c3.1/annotated/Study 2c3.1 (complete)">Study 2c3.1 (scroll, annotated)</option>
+					<option value="path=Study 2c3.1/Study 2c3.1 (scroll)">Study 2c3.1 (scroll)</option>
+					<option value="path=Study 2c3.1/annotated/Study 2c3.1 (scroll)">Study 2c3.1 (scroll, annotated)</option>
 					<option value="path=Study 2c3.1/Study 2c3.1 (3 pages)">Study 2c3.1 (pages)</option>
-					<option value="path=Study 3 sketch 1/Study 3 sketch 1 (complete)">Study 3 sketch 1 (scroll)</option>
+					<option value="path=Study 3 sketch 1/Study 3 sketch 1 (scroll)">Study 3 sketch 1 (scroll)</option>
 					<option value="path=Study 3 sketch 1/Study 3 sketch 1 (2 pages)">Study 3 sketch 1 (pages)</option>
-					<option value="path=Study 3 sketch 2.1 - with input/Study 3 sketch 2 (complete), inputHandler=keyboard1">Study 3 sketch 2.1 - with input (scroll)</option>
+					<option value="path=Study 3 sketch 2.1 - with input/Study 3 sketch 2 (scroll), inputHandler=keyboard1">Study 3 sketch 2.1 - with input (scroll)</option>
 					<option value="path=Study 3 sketch 2.1 - with input/Study 3 sketch 2 (2 pages), inputHandler=keyboard1">Study 3 sketch 2.1 - with input (pages)</option>
-					<option value="path=Study 3 sketch 2.2 - less visible/Study 3 sketch 2 (complete), inputHandler=keyboard1">Study 3 sketch 2.2 - less visible (scroll)</option>
+					<option value="path=Study 3 sketch 2.2 - less visible/Study 3 sketch 2 (scroll), inputHandler=keyboard1">Study 3 sketch 2.2 - less visible (scroll)</option>
 					<option value="path=Study 3 sketch 2.2 - less visible/Study 3 sketch 2 (1 page), inputHandler=keyboard1">Study 3 sketch 2.2 - less visible (pages)</option>
 				</select>
 				<select id="outputDeviceSelect"
