--- a/assistantPerformer.html
+++ b/assistantPerformer.html
@@ -13,19 +13,18 @@ xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
     <!-- Javascript files are included at the end of the body element -->
 
 </head>
-<body
-    style="text-align: center; font-family: Lucida Sans Unicode, Verdana, Arial, Geneva, Sans-Serif; padding: 0; margin: 0; overflow:hidden">
+<body style="text-align: center; font-family: Lucida Sans Unicode, Verdana, Arial, Geneva, Sans-Serif; padding: 0; margin: 0; overflow:hidden">
 	<div id="titleOptionsDiv" style="text-align: center; visibility: visible; margin:0;">
-		<p class="header1" style="margin:5px;">
+		<p class="header1">
 			Assistant Performer
 		</p>
 		<div style="color: #8888FF; font-size: 12px">
-			This page currently runs in the latest versions of Chrome and Firefox, with the <a href="http://jazz-soft.net">Jazz</a>
-			plug-in (v 1.3) installed.<br />
-			To use Chrome, activate the Web-MIDI-API flag in chrome://flags.<br />
+			This page uses the <a href="http://www.w3.org/TR/webmidi/">Web-MIDI-API</a>, and is tested in the latest stable versions of Chrome and Firefox.<br />
+			Firefox currently requires the <a href="http://jazz-soft.net">Jazz</a> plug-in to be installed.<br />
+			Chrome v.43 implements the Web-MIDI-API natively. Earlier versions need the Web-MIDI-API flag (in chrome://flags) to be activated.<br />
 			<a id="aboutAssistantPerformerLink"
-				style="font-size: 11px;"
-				href="http://james-ingram-act-two.de/open-source/publicAssistantPerformer/aboutAssistantPerformer.html">
+			   style="font-size: 11px;"
+			   href="http://james-ingram-act-two.de/open-source/aboutAssistantPerformer.html">
 				More about this version of the Assistant Performer...
 			</a>
 		</div>
@@ -40,7 +39,7 @@ xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
 				<select id="inputDeviceSelect"
 						class="deviceSelector" onchange="_AP.controls.doControl('inputDeviceSelect')"></select>
 				<select id="scoreSelect"
-						class="deviceSelector" onchange="_AP.controls.doControl('scoreSelect')">
+						class="deviceSelector" style="width: 240px" onchange="_AP.controls.doControl('scoreSelect')">
 					<option value="choose a score">choose a score</option>
 					<option value="path=Song Six/Song Six (scroll)">Song Six (scroll)</option>
 					<option value="path=Song Six/Song Six (14 pages)">Song Six (pages)</option>
@@ -61,21 +60,19 @@ xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
 				<a id="aboutScoreLink" href="" target="_blank">About this score...</a>
 			</div>-->
 			<div id="globalSpeedDiv" class="globalSpeedPanel" style="display:none;">
-				<div style="padding-top: 4px;">
 					<label id="globalSpeedInputNumberLabel1" for="globalSpeedInput">
 						speed:
 					</label>
 					<input type="number" id="globalSpeedInput" value="100"
-							onblur="_AP.controls.doControl('globalSpeedInput')"
-							style="margin: 0 0 3px 0; width: 65px; vertical-align: middle;" />
+						   onblur="_AP.controls.doControl('globalSpeedInput')"
+						   style="margin: 0 0 3px 0; width: 65px; vertical-align: middle;" />
 					<label id="globalSpeedInputNumberLabel2" for="globalSpeedInput">
 						% [Greater than 0%] Higher values lead to higher speed.
 					</label>
-				</div>
 			</div>
 			<input id="startRuntimeButton" type="button" class="startRuntimeButton" value="Start"
-					onclick="_AP.controls.beginRuntime()"
-					style="display:none;" />
+				   onclick="_AP.controls.beginRuntime()"
+				   style="display:none;" />
 		</div>
 	</div>
 	<div id="svgRuntimeControls" class="runtimeDiv" style="top: 2px; width: 1028px; height: 41px;">
@@ -286,32 +283,32 @@ xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
 				-->
 	</div>
 
-    <script src="shim/WebMIDIAPI.js" type="text/javascript"></script>
+	<script src="shim/WebMIDIAPI.js" type="text/javascript"></script>
 
-    <script src="ap/Namespace.js" type="text/javascript"></script>
-    
-    <script src="ap/Constants.js" type="text/javascript"></script>
-    <script src="ap/Utilities.js" type="text/javascript"></script>
-    <script src="ap/Message.js" type="text/javascript"></script>
-    <script src="ap/Moment.js" type="text/javascript"></script>
-    <script src="ap/MidiChord.js" type="text/javascript"></script>
-    <script src="ap/MidiRest.js" type="text/javascript"></script>
-    <script src="ap/Track.js" type="text/javascript"></script>
+	<script src="ap/Namespace.js" type="text/javascript"></script>
+
+	<script src="ap/Constants.js" type="text/javascript"></script>
+	<script src="ap/Utilities.js" type="text/javascript"></script>
+	<script src="ap/Message.js" type="text/javascript"></script>
+	<script src="ap/Moment.js" type="text/javascript"></script>
+	<script src="ap/MidiChord.js" type="text/javascript"></script>
+	<script src="ap/MidiRest.js" type="text/javascript"></script>
+	<script src="ap/Track.js" type="text/javascript"></script>
 	<script src="ap/Sequence.js" type="text/javascript"></script>
 	<script src="ap/Seq.js" type="text/javascript"></script>
-    <script src="ap/TrackRecording.js" type="text/javascript"></script>
-    <script src="ap/SequenceRecording.js" type="text/javascript"></script>
-    <script src="ap/StandardMidiFile.js" type="text/javascript"></script>
-    <script src="ap/Markers.js" type="text/javascript"></script>
-    <script src="ap/InputControls.js" type="text/javascript"></script>
+	<script src="ap/TrackRecording.js" type="text/javascript"></script>
+	<script src="ap/SequenceRecording.js" type="text/javascript"></script>
+	<script src="ap/StandardMidiFile.js" type="text/javascript"></script>
+	<script src="ap/Markers.js" type="text/javascript"></script>
+	<script src="ap/InputControls.js" type="text/javascript"></script>
 	<script src="ap/InputChordDef.js" type="text/javascript"></script>
 	<script src="ap/InputChord.js" type="text/javascript"></script>
 	<script src="ap/InputRest.js" type="text/javascript"></script>
 	<script src="ap/MidiChordDef.js" type="text/javascript"></script>
-    <script src="ap/Score.js" type="text/javascript"></script>
-    <script src="ap/TracksControl.js" type="text/javascript"></script>
-    <script src="ap/Controls.js" type="text/javascript"></script>
-    <script src="ap/Main.js" type="text/javascript"></script>
+	<script src="ap/Score.js" type="text/javascript"></script>
+	<script src="ap/TracksControl.js" type="text/javascript"></script>
+	<script src="ap/Controls.js" type="text/javascript"></script>
+	<script src="ap/Main.js" type="text/javascript"></script>
 
 	<script src="ap/Keyboard1.js" type="text/javascript"></script>
 </body>
