--- a/assistantPerformer.html
+++ b/assistantPerformer.html
@@ -25,7 +25,7 @@ xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
 			<span class="devText">
 				Caution: This application is being developed, and is therefore volatile. The current version may well contain bugs.<br />
 				Please use your browser's refresh button to check for the latest update.<br />
-				This version uploaded: 22.08.06.2015 (hour.day.month.year)
+				This version uploaded: 11.11.06.2015 (hour.day.month.year)
 			</span>
 			<br />
 			<a id="aboutAssistantPerformerLink"
@@ -47,17 +47,12 @@ xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
 				<select id="scoreSelect"
 						class="deviceSelector" style="width: 240px" onchange="_AP.controls.doControl('scoreSelect')">
 					<option value="choose a score">choose a score</option>
-					<option value="path=Song Six/Song Six (scroll)">Song Six (scroll)</option>
-					<option value="path=Song Six/Song Six (14 pages)">Song Six (pages)</option>
+					<option value="path=Song Six/annotated/Song Six (scroll)">Song Six (scroll) -- annotated</option>
 					<option value="path=Study 2c3.1/Study 2c3.1 (scroll)">Study 2c3.1 (scroll)</option>
-					<option value="path=Study 2c3.1/annotated/Study 2c3.1 (scroll)">Study 2c3.1 (scroll, annotated)</option>
-					<option value="path=Study 2c3.1/Study 2c3.1 (3 pages)">Study 2c3.1 (pages)</option>
 					<option value="path=Study 3 sketch 1/Study 3 sketch 1 (scroll)">Study 3 sketch 1 (scroll)</option>
 					<option value="path=Study 3 sketch 1/Study 3 sketch 1 (2 pages)">Study 3 sketch 1 (pages)</option>
 					<option value="path=Study 3 sketch 2.1 - with input/Study 3 sketch 2 (scroll), inputHandler=keyboard1">Study 3 sketch 2.1 - with input (scroll)</option>
-					<option value="path=Study 3 sketch 2.1 - with input/Study 3 sketch 2 (2 pages), inputHandler=keyboard1">Study 3 sketch 2.1 - with input (pages)</option>
 					<option value="path=Study 3 sketch 2.2 - less visible/Study 3 sketch 2 (scroll), inputHandler=keyboard1">Study 3 sketch 2.2 - less visible (scroll)</option>
-					<option value="path=Study 3 sketch 2.2 - less visible/Study 3 sketch 2 (1 page), inputHandler=keyboard1">Study 3 sketch 2.2 - less visible (pages)</option>
 				</select>
 				<select id="outputDeviceSelect"
 						class="deviceSelector" onchange="_AP.controls.doControl('outputDeviceSelect')"></select>
