Recompiled all scores afer font changes.
The fonts have been revised (in Moritz) following
the upgrade to Windows 10.
Added _all_ the fonts that are used in scores to the
assistant performer's fonts folder (and to the fonts
stylesheet) so that they should work on any OS.
Re-enabled Song Six

--- a/assistantPerformer.html
+++ b/assistantPerformer.html
@@ -25,7 +25,7 @@ xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
 			<span class="devText">
 				Caution: This application is being developed, and is therefore volatile. The current version may well contain bugs.<br />
 				Please use your browser's refresh button to check for the latest update.<br />
-				This version uploaded: 22.24.06.2015 (hour.day.month.year)
+				This version uploaded: 11.11.06.2015 (hour.day.month.year)
 			</span>
 			<br />
 			<a id="aboutAssistantPerformerLink"
@@ -47,6 +47,7 @@ xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
 				<select id="scoreSelect"
 						class="deviceSelector" style="width: 240px" onchange="_AP.controls.doControl('scoreSelect')">
 					<option value="choose a score">choose a score</option>
+					<option value="path=Song Six/annotated/Song Six (scroll)">Song Six (scroll) -- annotated</option>
 					<option value="path=Study 2c3.1/Study 2c3.1 (scroll)">Study 2c3.1 (scroll)</option>
 					<option value="path=Study 3 sketch 1/Study 3 sketch 1 (scroll)">Study 3 sketch 1 (scroll)</option>
 					<option value="path=Study 3 sketch 1/Study 3 sketch 1 (2 pages)">Study 3 sketch 1 (pages)</option>
