--- a/assistantPerformer.html
+++ b/assistantPerformer.html
@@ -307,7 +307,7 @@ xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
 	<script src="ap/SequenceRecording.js" type="text/javascript"></script>
 	<script src="ap/StandardMidiFile.js" type="text/javascript"></script>
 	<script src="ap/Markers.js" type="text/javascript"></script>
-	<script src="ap/InputControls.js" type="text/javascript"></script>
+	<script src="ap/TrkOptions.js" type="text/javascript"></script>
 	<script src="ap/InputChordDef.js" type="text/javascript"></script>
 	<script src="ap/InputChord.js" type="text/javascript"></script>
 	<script src="ap/InputRest.js" type="text/javascript"></script>
