--- a/assistantPerformer.html
+++ b/assistantPerformer.html
@@ -290,7 +290,7 @@ xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
 				-->
 	</div>
 
-	<script src="shim/WebMIDIAPI.js" type="text/javascript"></script>
+	<script src="shim/WebMIDIAPI.min.js" type="text/javascript"></script>
 
 	<script src="ap/Namespace.js" type="text/javascript"></script>
 
