Renamed "disabled" to "undefined" in TrkOptions
Updated the code for trkOption values that have
changed in score files:
pedal="disabled" is now pedal="undefined"
velocity="disabled" is now velocity="undefined"
trkOff="disabled" is now trkOff="undefined"

--- a/assistantPerformer.html
+++ b/assistantPerformer.html
@@ -20,7 +20,7 @@ xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
 		</p>
 		<div class="helpText">
 			This web application uses the <a href="http://www.w3.org/TR/webmidi/">Web-MIDI-API</a>, and is usually tested in the latest stable versions of Firefox and Chrome on Windows 10.<br />
-			Firefox requires the <a href="http://jazz-soft.net">Jazz</a> plug-in to be installed, but Jazz is currently not working with Windows 10, so I have a problem testing in Firefox.<br />
+			Firefox requires the <a href="http://jazz-soft.net">Jazz</a> plug-in to be installed.<br />
 			Chrome v.43 and later implement the Web-MIDI-API natively, so there is no problem there.<br />
 			<span class="blueHelpText">
 				Note that it is not possible to display or play scores unless a valid MIDI output device has been selected, but that<br />
@@ -31,7 +31,7 @@ xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
 			<span class="redHelpText">
 				Caution: This application is being developed, and is therefore volatile. The current version may well contain bugs.<br />
 				Please use your browser's refresh button to check for the latest update.<br />
-				This version uploaded: 00.14.08.2015 (hour.day.month.year)
+				This version uploaded: 23.23.09.2015 (hour.day.month.year)
 			</span>
 			<br />
 			<a id="aboutAssistantPerformerLink"
