Updated introductory text
Deleting the second repository, preparing to
add the online WebMIDISynth.

--- a/assistantPerformer.html
+++ b/assistantPerformer.html
@@ -19,19 +19,13 @@ xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
 			Assistant Performer
 		</p>
 		<div class="helpText">
-			This web application uses the <a href="http://www.w3.org/TR/webmidi/">Web-MIDI-API</a>, and is usually tested in the latest stable versions of Firefox and Chrome on Windows 10.<br />
+			This Web MIDI application is normally tested in the latest stable versions of Firefox and Chrome on Windows 10.<br />
 			Firefox requires the <a href="http://jazz-soft.net">Jazz</a> plug-in to be installed.<br />
-			Chrome v.43 and later implement the Web-MIDI-API natively, so there is no problem there.<br />
 			<span class="blueHelpText">
 				Note that it is not possible to display or play scores unless a valid MIDI output device has been selected, but that<br />
-				Chrome specifically prevents the use of the Microsoft GS Wavetable Synth (part of the Windows operating system).<br />
-				On Windows, an alternative to using a hardware MIDI synthesizer is to install the free
-				<a id="VirtualMIDISynthLink" href="http://coolsoft.altervista.org/en/virtualmidisynth">Virtual MIDI Synth</a>.
-			</span><br />
-			<span class="redHelpText">
-				Caution: This application is being developed, and is therefore volatile. The current version may well contain bugs.<br />
-				Please use your browser's refresh button to check for the latest update.<br />
-				This version uploaded: 23.23.09.2015 (hour.day.month.year)
+			only hardware or software devices that involve installing a plugin are currently supported.<br />
+				On Windows, the free <a id="VirtualMIDISynthLink" href="http://coolsoft.altervista.org/en/virtualmidisynth">Virtual MIDI Synth</a> can be installed and used in both browsers.<br />
+				In Firefox, which depends on the Jazz plugin, the Microsoft GS Wavetable Synth (part of the Windows operating system) is available.<br />
 			</span>
 			<br />
 			<a id="aboutAssistantPerformerLink"
