--- a/assistantPerformer.html
+++ b/assistantPerformer.html
@@ -39,8 +39,8 @@ xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
 				<span class="blueHelpText">
 					Note that it is not possible to display or play scores in this application unless a MIDI output device has been selected.<br />
 					Scores and recordings can however be found via the link that appears when a score is selected.<br />
-					Currently, the only score that can be played on the <a target="_blank" href="https://github.com/notator/residentSf2Synth">Resident Sf2 Synth</a> is the Pianola Music (1967).
-					All the other scores<br /> require hardware or software output devices that are (or depend on) plugins.<br />
+					Currently, the only scores that can be played on the <a target="_blank" href="https://github.com/notator/residentSf2Synth">Resident Sf2 Synth</a> are the Pianola Music (1967) and Study 1 (2005).
+					All the other scores require hardware or software output devices that are (or depend on) plugins.<br />
 					On Windows, the free <a id="VirtualMIDISynthLink" target="_blank" href="http://coolsoft.altervista.org/en/virtualmidisynth">Virtual MIDI Synth</a> can be installed and used in both Firefox and Chrome.<br />
 					The <em>Microsoft GS Wavetable Synth</em> (part of the Windows operating system) is available in Firefox if Jazz is installed.<br />
 				</span>
@@ -59,13 +59,15 @@ xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
 				<select id="scoreSelect"
 						class="deviceSelector" style="width: 240px" onchange="_AP.controls.doControl('scoreSelect')">
 					<option>choose a score</option>
-					<option>Song Six (scroll) -- annotated</option>
-					<option>Study 2c3.1 (scroll)</option>
-					<option>Study 3 sketch 1 (scroll)</option>
+					<option>Pianola Music (1967)</option>
+					<option>Study 1 (2005)</option>
+					<option>Study 2c3.1 (2010-2011)</option>
+					<option>Study 3 sketch 1 (2012-2014)</option>
 					<option>Study 3 sketch 1 (pages)</option>
-					<option>Study 3 sketch 2.1 - with input (scroll)</option>
+					<option>Song Six (2013-2014) -- annotated</option>
+					<option>Study 3 sketch 2.1 - with input (2015)</option>
 					<option>Study 3 sketch 2.2 - less visible (scroll)</option>
-					<option>Pianola Music 1967 (scroll)</option>
+					<!--<option>Tombeau 1 (scroll)</option>-->
 				</select>
 				<select id="outputDeviceSelect"
 						class="deviceSelector" onchange="_AP.controls.doControl('outputDeviceSelect')"></select>
