--- a/assistantPerformer.html
+++ b/assistantPerformer.html
@@ -299,15 +299,15 @@ xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
 				-->
 	</div>
 
-	<script src="../WebMIDI/namespace.js" type="text/javascript"></script>
-	<script src="../WebMIDI/constants.js" type="text/javascript"></script>
-	<script src="../WebMIDI/utilities.js" type="text/javascript"></script>
+    <script src="webMIDI/namespace.js" type="text/javascript"></script>
+    <script src="webMIDI/constants.js" type="text/javascript"></script>
+    <script src="webMIDI/utilities.js" type="text/javascript"></script>
 
-	<script src="../residentSf2Synth/riffParser.js" type="text/javascript"></script>
-	<script src="../residentSf2Synth/soundFontParser.js" type="text/javascript"></script>
-	<script src="../residentSf2Synth/soundFont.js" type="text/javascript"></script>
-	<script src="../residentSf2Synth/soundFontSynthNote.js" type="text/javascript"></script>
-	<script src="../residentSf2Synth/residentSf2Synth.js" type="text/javascript"></script>
+    <script src="../residentSf2Synth/riffParser.js" type="text/javascript"></script>
+    <script src="../residentSf2Synth/soundFontParser.js" type="text/javascript"></script>
+    <script src="../residentSf2Synth/soundFont.js" type="text/javascript"></script>
+    <script src="../residentSf2Synth/soundFontSynthNote.js" type="text/javascript"></script>
+    <script src="../residentSf2Synth/residentSf2Synth.js" type="text/javascript"></script>
 
 	<script src="shim/WebMIDIAPI.min.js" type="text/javascript"></script>
 
