--- a/assistantPerformer.html
+++ b/assistantPerformer.html
@@ -61,10 +61,9 @@ xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
 					<option>choose a score</option>
 					<option>Pianola Music (1967)</option>
 					<option>Study 1 (2005)</option>
-					<option>Study 2c3.1 (2010-2011)</option>
+					<option>Study 2 (2010-2011)</option>
 					<option>Study 3 sketch 1 (2012-2014)</option>
 					<option>Study 3 sketch 1 (pages)</option>
-					<option>Song Six (2013-2014) -- annotated</option>
 					<option>Study 3 sketch 2.1 - with input (2015)</option>
 					<option>Study 3 sketch 2.2 - less visible (scroll)</option>
 					<!--<option>Tombeau 1 (scroll)</option>-->
@@ -303,11 +302,11 @@ xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
     <script src="webMIDI/constants.js" type="text/javascript"></script>
     <script src="webMIDI/utilities.js" type="text/javascript"></script>
 
-    <script src="../residentSf2Synth/riffParser.js" type="text/javascript"></script>
-    <script src="../residentSf2Synth/soundFontParser.js" type="text/javascript"></script>
-    <script src="../residentSf2Synth/soundFont.js" type="text/javascript"></script>
-    <script src="../residentSf2Synth/soundFontSynthNote.js" type="text/javascript"></script>
-    <script src="../residentSf2Synth/residentSf2Synth.js" type="text/javascript"></script>
+	<script src="../residentSf2Synth/riffParser.js" type="text/javascript"></script>
+	<script src="../residentSf2Synth/soundFontParser.js" type="text/javascript"></script>
+	<script src="../residentSf2Synth/soundFont.js" type="text/javascript"></script>
+	<script src="../residentSf2Synth/soundFontSynthNote.js" type="text/javascript"></script>
+	<script src="../residentSf2Synth/residentSf2Synth.js" type="text/javascript"></script>
 
 	<script src="shim/WebMIDIAPI.min.js" type="text/javascript"></script>
 
