Updated to latest version for Frankfurt 2017

--- a/svgScoreExtensions.htm
+++ b/svgScoreExtensions.htm
@@ -38,7 +38,9 @@
                 <a href="../aboutAssistantPerformer.html">Assistant Performer</a> software.<br />
                  It is being tracked in the Assistant Performer&#39;s GitHub repository at <a href="https://github.com/notator/assistant-performer">https://github.com/notator/assistant-performer</a>.
 			<br />
-            <span style="color: #FF0000">Note that these extensions are subject to change without notice!</span><br /><br />
+            <span style="color: #FF0000">
+            <br />
+            N.B.: this document is not currently up to date (22.03.2017). For the current description, see <a href="https://github.com/notator/Moritz/issues/2">Moritz' issue#2</a>.</span><br /><br />
             This version introduces continuous controller settings (<span class="code">ccSettings</span>), that can be attached to <em>Input
 				Chords</em>.<br /> 
 			It also contains a major revision of the <span class="code">trkOptions</span>.<br />
