--- a/assistantPerformer.html
+++ b/assistantPerformer.html
@@ -48,11 +48,10 @@
                         <option>Study 1 (2005)</option>
                         <option>Study 2 (2010-2011)</option>
                         <option>Study 3 sketch 1 (2012-2014)</option>
-                        <!--<option>Study 3 sketch 1 (pages)</option>
+                        <option>Study 3 sketch 1 (pages)</option>
                         <option>Study 3 sketch 2.1 - with input (2015)</option>
                         <option>Study 3 sketch 2.2 - less visible (scroll)</option>
-                        <option>Tombeau 1 (scroll)</option>
-                        -->
+                        <!--<option>Tombeau 1 (scroll)</option>-->
                     </select>
                     <select id="outputDeviceSelect"
                             class="deviceSelector" onchange="_AP.controls.doControl('outputDeviceSelect')"></select>
@@ -68,21 +67,42 @@
         </div>
         <div class="helpText">
             <div class="note">
-                <span style="font-size:13px">
-                    Select a score and an output device, then click the Start button that appears.<br />
-                    For further instructions, see <strong>Usage</strong> in
-                    <a target="_blank" href="http://james-ingram-act-two.de/open-source/aboutAssistantPerformer.html">
-                        about the Assistant Performer
-                    </a><br />
+                This experimental Web MIDI application is normally tested in the latest version of Chrome on Windows 10.<br />
+                I will be testing it again on Firefox, when they have completed their implementation of the Web MIDI API (currently in the pipeline).
+                To find out which other browsers might be tried, go to <a target="_blank" href="http://caniuse.com/#feat=midi">check Web <em>MIDI</em> API</a>.<br />
+                <span class="blueHelpText">
+                    Note that it is not possible to display or play scores in this application unless a MIDI output device has been selected.<br />
+                    The <a target="_blank" href="https://github.com/notator/residentSf2Synth"><em>Resident Sf2 Synth</em></a> should always be available, since it only requires the Web <em>Audio</em> API,
+                    and that interface is always implemented when the Web <em>MIDI</em> API is implemented (go to <a target="_blank" href="http://caniuse.com/#feat=audio-api">check Web <em>Audio</em> API</a>).<br />
+                    Currently, the only scores that can be played on the <em>Resident Sf2 Synth</em> are the Pianola Music (1967) and Study 1 (2005).
+                    All the other scores require hardware or software output devices that are (or depend on) plugins.<br />
+                    On Windows, the free <a id="VirtualMIDISynthLink" target="_blank" href="http://coolsoft.altervista.org/en/virtualmidisynth"><em>Virtual MIDI Synth</em></a> plugin can be used to play any of the available scores.<br />
+                    Scores, recordings and some videos of the Assistant Performer performing can however be found via the link that appears when a score is selected.<br />
                 </span>
-                <span style="font-size:12px; color:blue">
-                    Note: MIDI input devices and some scores have been disabled in this version of the application.<br />
-                    <!--
-                    This file, and its associated Javascript files are in the "Frankfurt" branch of my local repository.
-                    To re-enable the input devices and scores, revert to the "master" branch.
-                    -->
-                </span>
+                <br />
+                The following <b>mp4 videos featuring Study 2</b> illustrate some of this software's more advanced features for those who don't want to install the <em>Virtual MIDI Synth</em>.
+                Unfortunately, Study 2 can't yet be performed on the <em>Resident Sf2 Synth</em>:
+                <ul class="ulStandard">
+                    <li>
+                        A complete performance of Study 2 (at the speed stored in the score):<br />
+
+                        <a target="_top" href="http://james-ingram-act-two.de/compositions/study2/study2Video100.html">View online (with comments)</a> /
+                        <a href="http://james-ingram-act-two.de/compositions/study2/videos/Study_2_100pc_09.06.2017.mp4">right-click to download mp4 (for better rendering)</a>.
+                    </li>
+                    <li>
+                        A demonstration of the Assistant Performer's basic functions (track selection, speed etc.):<br />
+                        <a target="_top" href="http://james-ingram-act-two.de/compositions/study2/study2VideoSelectionDemos.html">View online (with comments)</a> /
+                        <a href="http://james-ingram-act-two.de/compositions/study2/videos/Study_2_selections_09.06.2017.mp4">right-click to download mp4 (for better rendering))</a>.
+                    </li>
+                    <li>
+                        A demonstration of the Assistant Performer's live conducting option:<br />
+                        <a target="_top" href="http://james-ingram-act-two.de/compositions/study2/study2VideoSlowBlueSection.html">View online (with comments)</a> /
+                        <a href="http://james-ingram-act-two.de/compositions/study2/videos/Study_2_slow_conducted_09.06.2017.mp4">right-click to download mp4 (for better rendering)</a>.
+                    </li>
+                </ul>
+                <span style="font-size:9px">ji www june 2017.</span>
             </div>
+
         </div>
     </div>
     <div id="svgRuntimeControls" class="runtimeDiv" style="top: 2px; width: 1028px; height: 41px;">
