Update to new version.
There are now on known bugs in either Moritz or the Assistant Performer.
All scores have been re-compiled in Moritz.
Hidden staves are now no longer supported.
Moritz now ensures that
    1. Every system contains all tracks
    2. Each track's MidiChannel is the same as its index (from top to bottom in each system).
The top track therefore always has MidiChannel 0, and the MidiChannels increase
contiguously from top to bottom of each system.
Deleted score (because hidden staves are no longer supported):
    Study 3 sketch 2.2 - less visible
Added new scores having two voice staves:
    Pianola Music - 3 staves
    Study 2 - 2 staves
    Study 3 sketch 1 - 4 staves
Bug Fixes:
    Scores containing 2-voice staves are now created (in Moritz) and performed (by the AP) correctly.
    Scores that consist of separate pages now scroll correctly while playing.
    (The single-page "scroll" scores were always working.)
    Refactored "midiChannel" --> "trkIndex" in InputObjectDef.js.

--- a/assistantPerformer.html
+++ b/assistantPerformer.html
@@ -41,18 +41,20 @@
                 <div id="deviceAndScoreSelectors" style="margin: 0">
                     <select id="inputDeviceSelect"
                             class="deviceSelector" onchange="_AP.controls.doControl('inputDeviceSelect')"></select>
-                    <select id="scoreSelect"
-                            class="deviceSelector" style="width: 240px" onchange="_AP.controls.doControl('scoreSelect')">
-                        <option>choose a score</option>
-                        <option>Pianola Music (1967)</option>
-                        <option>Study 1 (2005)</option>
-                        <option>Study 2 (2010-2011)</option>
-                        <option>Study 3 sketch 1 (2012-2014)</option>
-                        <option>Study 3 sketch 1 (pages)</option>
-                        <option>Study 3 sketch 2.1 - with input (2015)</option>
-                        <option>Study 3 sketch 2.2 - less visible (scroll)</option>
-                        <!--<option>Tombeau 1 (scroll)</option>-->
-                    </select>
+					<select id="scoreSelect"
+							class="deviceSelector" style="width: 240px" onchange="_AP.controls.doControl('scoreSelect')">
+						<option>choose a score</option>
+						<option>Pianola Music (1967)</option>
+						<option>Pianola Music (1967) on 3 staves</option>
+						<option>Study 1 (2005)</option>
+						<option>Study 2 (2010-2011)</option>
+						<option>Study 2 (2010-2011) on 2 staves</option>
+						<option>Study 3 sketch 1 (2012-2014)</option>
+						<option>Study 3 sketch 1 (pages)</option>
+						<option>Study 3 sketch 1 (2012-2014) on 4 staves</option>
+						<option>Study 3 sketch 2.1 - with input (2015)</option>
+						<!--<option>Tombeau 1 (scroll)</option>-->
+					</select>
                     <select id="outputDeviceSelect"
                             class="deviceSelector" onchange="_AP.controls.doControl('outputDeviceSelect')"></select>
                 </div>
