--- a/scores/Tombeau 1/Tombeau 1.html
+++ b/scores/Tombeau 1/Tombeau 1.html
@@ -21,6 +21,41 @@
 					width="1429"
 					height="875" />
 				<br />
+				<embed
+					src="Tombeau 1 page 2.svg"
+					content-type="image/svg+xml"
+					class="svgPage"
+					width="1429"
+					height="875" />
+				<br />
+				<embed
+					src="Tombeau 1 page 3.svg"
+					content-type="image/svg+xml"
+					class="svgPage"
+					width="1429"
+					height="875" />
+				<br />
+				<embed
+					src="Tombeau 1 page 4.svg"
+					content-type="image/svg+xml"
+					class="svgPage"
+					width="1429"
+					height="875" />
+				<br />
+				<embed
+					src="Tombeau 1 page 5.svg"
+					content-type="image/svg+xml"
+					class="svgPage"
+					width="1429"
+					height="875" />
+				<br />
+				<embed
+					src="Tombeau 1 page 6.svg"
+					content-type="image/svg+xml"
+					class="svgPage"
+					width="1429"
+					height="875" />
+				<br />
 			</div>
 		</div>
 	</body>
