--- a/assistantPerformer.html
+++ b/assistantPerformer.html
@@ -7,7 +7,7 @@
           media="all"
           rel="stylesheet"
           type="text/css" />
-    <link rel="shortcut icon" href="http://james-ingram-act-two.de/open-source/assistantPerformer/AP3.ico" />
+    <link rel="shortcut icon" href="https://james-ingram-act-two.de/open-source/assistantPerformer/AP3.ico" />
     <!-- Javascript files are included at the end of the body element --> 
 </head>
 <body style="text-align: center; font-family: Lucida Sans Unicode, Verdana, Arial, Geneva, Sans-Serif; padding: 0; margin: 0; overflow:hidden">
@@ -23,7 +23,7 @@
                     <td class="helpText" style="padding:7px 0 0 0; text-align:left">
                         <a id="aboutAssistantPerformerLink"
                            target="_blank"
-                           href="http://james-ingram-act-two.de/open-source/aboutAssistantPerformer.html">
+                           href="https://james-ingram-act-two.de/open-source/aboutAssistantPerformer.html">
                             about the Assistant Performer
                         </a>
                     </td>
@@ -88,18 +88,18 @@
                     <li>
                         A complete performance of Study 2 (at the speed stored in the score):<br />
 
-                        <a target="_top" href="http://james-ingram-act-two.de/compositions/study2/study2Video100.html">View online (with comments)</a> /
-                        <a href="http://james-ingram-act-two.de/compositions/study2/videos/Study_2_100pc_09.06.2017.mp4">right-click to download mp4 (for better rendering)</a>.
+                        <a target="_top" href="https://james-ingram-act-two.de/compositions/study2/study2Video100.html">View online (with comments)</a> /
+                        <a href="https://james-ingram-act-two.de/compositions/study2/videos/Study_2_100pc_09.06.2017.mp4">right-click to download mp4 (for better rendering)</a>.
                     </li>
                     <li>
                         A demonstration of the Assistant Performer's basic functions (track selection, speed etc.):<br />
-                        <a target="_top" href="http://james-ingram-act-two.de/compositions/study2/study2VideoSelectionDemos.html">View online (with comments)</a> /
-                        <a href="http://james-ingram-act-two.de/compositions/study2/videos/Study_2_selections_09.06.2017.mp4">right-click to download mp4 (for better rendering))</a>.
+                        <a target="_top" href="https://james-ingram-act-two.de/compositions/study2/study2VideoSelectionDemos.html">View online (with comments)</a> /
+                        <a href="https://james-ingram-act-two.de/compositions/study2/videos/Study_2_selections_09.06.2017.mp4">right-click to download mp4 (for better rendering))</a>.
                     </li>
                     <li>
                         A demonstration of the Assistant Performer's live conducting option:<br />
-                        <a target="_top" href="http://james-ingram-act-two.de/compositions/study2/study2VideoSlowBlueSection.html">View online (with comments)</a> /
-                        <a href="http://james-ingram-act-two.de/compositions/study2/videos/Study_2_slow_conducted_09.06.2017.mp4">right-click to download mp4 (for better rendering)</a>.
+                        <a target="_top" href="https://james-ingram-act-two.de/compositions/study2/study2VideoSlowBlueSection.html">View online (with comments)</a> /
+                        <a href="https://james-ingram-act-two.de/compositions/study2/videos/Study_2_slow_conducted_09.06.2017.mp4">right-click to download mp4 (for better rendering)</a>.
                     </li>
                 </ul>
                 <span style="font-size:9px">ji www june 2017.</span>
@@ -340,19 +340,19 @@
         <!--
             <object>s like the following are written programmatically when the score has been selected.
             <object
-                data="http://james-ingram-act-two.de/open-source/assistantPerformer/scores/Study%202c3.1/Study 2c3.1 page 1.svg"
+                data="https://james-ingram-act-two.de/open-source/assistantPerformer/scores/Study%202c3.1/Study 2c3.1 page 1.svg"
                 type="image/svg+xml"
                 class="svgPage">
                     Browser does not support SVG!
             </object>
             <object
-                data="http://james-ingram-act-two.de/open-source/assistantPerformer/scores/Study%202c3.1/Study 2c3.1 page 2.svg"
+                data="https://james-ingram-act-two.de/open-source/assistantPerformer/scores/Study%202c3.1/Study 2c3.1 page 2.svg"
                 type="image/svg+xml"
                 class="svgPage">
                     Browser does not support SVG!
             </object>
             <object
-                data="http://james-ingram-act-two.de/open-source/assistantPerformer/scores/Study%202c3.1/Study 2c3.1 page 3.svg"
+                data="https://james-ingram-act-two.de/open-source/assistantPerformer/scores/Study%202c3.1/Study 2c3.1 page 3.svg"
                 type="image/svg+xml"
                 class="svgPage">
                     Browser does not support SVG!
