Added Erratum Musical I-VIII and the Three Crashes scores

--- a/assistantPerformer.html
+++ b/assistantPerformer.html
@@ -53,6 +53,10 @@
 						<option>Study 3 sketch 1 (pages)</option>
 						<option>Study 3 sketch 1 (2012-2014) on 4 staves</option>
 						<option>Study 3 sketch 2.1 - with input (2015)</option>
+                        <optgroup label="Erratum Musical">
+                            <option value="Erratum Musical">Erratum Musical I-VIII</option>
+                            <option value="Three Crashes">Three Crashes</option>
+                        </optgroup>
 						<!--<option>Tombeau 1 (scroll)</option>-->
 					</select>
                     <select id="outputDeviceSelect"
@@ -76,7 +80,8 @@
                     Note that it is not possible to display or play scores in this application unless a MIDI output device has been selected.<br />
                     The <a target="_blank" href="https://github.com/notator/residentSf2Synth"><em>Resident Sf2 Synth</em></a> should always be available, since it only requires the Web <em>Audio</em> API,
                     and that interface is always implemented when the Web <em>MIDI</em> API is implemented (go to <a target="_blank" href="http://caniuse.com/#feat=audio-api">check Web <em>Audio</em> API</a>).<br />
-                    Currently, the only scores that can be played on the <em>Resident Sf2 Synth</em> are the Pianola Music (1967) and Study 1 (2005).
+                    Currently, the only scores that can be played on the <em>Resident Sf2 Synth</em> are the Pianola Music (1967), Study 1 (2005),
+                    Erratum Musical I-VIII (2019) and the Three Crashes (2019).<br />
                     All the other scores require hardware or software output devices that are (or depend on) plugins.<br />
                     On Windows, the free <a id="VirtualMIDISynthLink" target="_blank" href="http://coolsoft.altervista.org/en/virtualmidisynth"><em>Virtual MIDI Synth</em></a> plugin can be used to play any of the available scores.<br />
                     Scores, recordings and some videos of the Assistant Performer performing can however be found via the link that appears when a score is selected.<br />
