--- a/assistantPerformer.html
+++ b/assistantPerformer.html
@@ -74,45 +74,29 @@
                        style="display:none;" />
             </div>
         </div>
-        <div class="helpText">
-            <div class="note">
-                This experimental Web MIDI application is normally tested in the latest version of Chrome on Windows 10.<br />
-                I will be testing it again on Firefox, when they have completed their implementation of the Web MIDI API (currently in the pipeline).
-                To find out which other browsers might be tried, go to <a target="_blank" href="http://caniuse.com/#feat=midi">check Web <em>MIDI</em> API</a>.<br />
-                <span class="blueHelpText">
-                    Note that it is not possible to display or play scores in this application unless a MIDI output device has been selected.<br />
-                    The <a target="_blank" href="https://github.com/notator/residentSf2Synth"><em>Resident Sf2 Synth</em></a> should always be available, since it only requires the Web <em>Audio</em> API,
-                    and that interface is always implemented when the Web <em>MIDI</em> API is implemented (go to <a target="_blank" href="http://caniuse.com/#feat=audio-api">check Web <em>Audio</em> API</a>).<br />
-                    Currently, the only scores that can be played on the <em>Resident Sf2 Synth</em> are the Pianola Music (1967), Study 1 (2005),
-                    Erratum Musical I-VIII (2019) and the Three Crashes (2019).<br />
-                    All the other scores require hardware or software output devices that are (or depend on) plugins.<br />
-                    On Windows, the free <a id="VirtualMIDISynthLink" target="_blank" href="http://coolsoft.altervista.org/en/virtualmidisynth"><em>Virtual MIDI Synth</em></a> plugin can be used to play any of the available scores.<br />
-                    Scores, recordings and some videos of the Assistant Performer performing can however be found via the link that appears when a score is selected.<br />
-                </span>
-                <br />
-                The following <b>mp4 videos featuring Study 2</b> illustrate some of this software's more advanced features for those who don't want to install the <em>Virtual MIDI Synth</em>.
-                Unfortunately, Study 2 can't yet be performed on the <em>Resident Sf2 Synth</em>:
-                <ul class="ulStandard">
-                    <li>
-                        A complete performance of Study 2 (at the speed stored in the score):<br />
-
-                        <a target="_top" href="https://james-ingram-act-two.de/compositions/study2/study2Video100.html">View online (with comments)</a> /
-                        <a href="https://james-ingram-act-two.de/compositions/study2/videos/Study_2_100pc_09.06.2017.mp4">right-click to download mp4 (for better rendering)</a>.
-                    </li>
-                    <li>
-                        A demonstration of the Assistant Performer's basic functions (track selection, speed etc.):<br />
-                        <a target="_top" href="https://james-ingram-act-two.de/compositions/study2/study2VideoSelectionDemos.html">View online (with comments)</a> /
-                        <a href="https://james-ingram-act-two.de/compositions/study2/videos/Study_2_selections_09.06.2017.mp4">right-click to download mp4 (for better rendering))</a>.
-                    </li>
-                    <li>
-                        A demonstration of the Assistant Performer's live conducting option:<br />
-                        <a target="_top" href="https://james-ingram-act-two.de/compositions/study2/study2VideoSlowBlueSection.html">View online (with comments)</a> /
-                        <a href="https://james-ingram-act-two.de/compositions/study2/videos/Study_2_slow_conducted_09.06.2017.mp4">right-click to download mp4 (for better rendering)</a>.
-                    </li>
-                </ul>
-                <span style="font-size:9px">ji www june 2017.</span>
-            </div>
-
+        <div class="note">
+            This experimental Web MIDI application is normally tested in the latest version of Chrome on Windows 10.<br />
+            I will be testing it again on Firefox, when they have completed their implementation of the Web MIDI API.<br />
+            Note that:<br />
+            <ul style="margin-top:0px">
+                <li>
+                    All scores can be played on the <b>ResidentWAFSynth</b> (a <b>software MIDI <i>output</i> device</b>), so the Web MIDI API<br />
+                    only really needs to be implemented by the browser in order to access a <b>hardware MIDI <i>input</i> device</b>.
+                </li>
+                <li>
+                    The <b>ResidentSf2Synth</b> can only play the following scores:<br />
+                    &nbsp;&nbsp;&nbsp;&nbsp;<i>Pianola Music</i> (1967), <i>Study 1</i> (2005), <i>Erratum Musical I-VIII</i> (2019) and the <i>Three Crashes</i> (2019).
+                </li>
+                <li>
+                    The <b>ResidentWAFSynth</b> and <b>ResidentSf2Synth</b> are being developed on GitHub at
+                    <a id="WebMIDISynthHostGitHubLink" target="_blank" href="https://github.com/notator/WebMIDISynthHost">WebMIDISynthHost</a>.
+                </li>
+                <li>
+                    On Windows, the free <a id="VirtualMIDISynthLink" target="_blank" href="http://coolsoft.altervista.org/en/virtualmidisynth"><b>Virtual MIDI Synth</b></a> plugin
+                    can also be used to play any of the available scores.
+                </li>
+            </ul>
+            <span style="font-size:9px">ji www march 2020.</span>
         </div>
     </div>
     <div id="svgRuntimeControls" class="runtimeDiv" style="top: 2px; width: 1028px; height: 41px;">
